# discordbot-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  main.cpp
discordbot-cpp/: CMakeLists.txt  client.h  server.cpp  websocket.h  websocketOLD.h
handybot-cpp/: CMakeLists.txt  client.hpp  http.hpp  main.cpp  websocket.cpp  websocket.hpp
